--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "recharts": "^3.4.1",
     "sass": "^1.79.1",
     "web-vitals": "^2.1.4"
   },
